; ModuleID = '/home/carl/AnghaBench/kphp-kdb/watchcat/extr_utils.c_watchcat_query_hash.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/watchcat/extr_utils.c_watchcat_query_hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @watchcat_query_hash(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @create_watchcat_query(i8* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @watchcat_query_hash_impl(i32* %7)
  store i64 %8, i64* %4, align 8
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @free_watchcat_query(i32* %9)
  %11 = load i64, i64* %4, align 8
  ret i64 %11
}

declare dso_local i32* @create_watchcat_query(i8*) #1

declare dso_local i64 @watchcat_query_hash_impl(i32*) #1

declare dso_local i32 @free_watchcat_query(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
